Fixed visible button alignment

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -3682,6 +3682,7 @@ body.sorting ul.collapsedSortTarget {
 								flex: 0.5 1 auto;
 								display: grid;
 								align-content: center;
+								justify-content: center;
 								border: 1px solid $bgLight;
 								text-align: center;
 								font-size: 8pt;
